--- a/src/stylesheets/_modules.scss
+++ b/src/stylesheets/_modules.scss
@@ -52,18 +52,16 @@ h1{
   // Overlay
   .overlay{
     display: block;
-    opacity: 0;
-    z-index: 999;
+    opacity: 1;
+    z-index: 10;
     width: 100%;
     height: 100%;
     position: absolute;
     top:0;
     left: 0;
-    background: rgba(#000, 0.75) url("iconmonstr-link-icon.svg") no-repeat center center;
+    background: rgba(#000, 0.2);
     background-size: 40%;
-    -moz-transition: opacity .25s ease-in-out;
-    -webkit-transition: opacity .25s ease-in-out;
-    transition: opacity .25s ease-in-out;
+    transition: background .25s ease-in-out;
   }
 
   // Text Blocks 
@@ -83,15 +81,6 @@ h1{
     margin-bottom: 3%;
   }
 
-  // &.cv, &.contact{
-  //   @include respond-min(768px) {
-  //     height: 174px;
-  //     float: left;
-  //     margin-right: 4%;
-  //     width: 48%;
-  //   }
-  // }
-
   &.contact {
     p.fn {
       font-size: 20px;
@@ -107,6 +96,9 @@ h1{
   // Project Block
   &.large {
     color: $light;
+    background-size: 100%;
+    background-position: center;
+    transition: background .25s ease-in-out;
     span{display: block;}
     .title{
       font-size: 40px;
@@ -118,6 +110,7 @@ h1{
       width: 100%;
       z-index: 1;
       letter-spacing: 5px;
+      z-index: 20;
     }
     .desc{
       font-size: 15px;
@@ -127,8 +120,12 @@ h1{
       left: 0;
       width: 100%;
       z-index: 1;
+      z-index: 20;
     }
-    &:hover{color: $bg;}
+    &:hover {
+      background-size: 105%;
+      .overlay{background-color: rgba($dark, 0.75) !important;}
+    }
 
     @include respond-min(768px) {
       @include large_block_size(48%);
@@ -166,6 +163,7 @@ h1{
 .block.small{
   background-size: 60%;
   margin-right: 4%;
+  &:hover{background-color: $contrast !important;}
   @include large_block_size(22%);
   &:nth-child(4n+0){margin-right: 0;}
   
@@ -176,14 +174,13 @@ h1{
   }
 }
 
-// Block Hover State
-a.block:hover .overlay{opacity: 1;}
-
 // Block Projects 
 .block.bath-ruby{background-image: url("bath-ruby-bg.jpg");}
 .block.aperyer{background-image: url("aperyer-bg.jpg");}
+.block.richard-windsor{background-image: url("richard-windsor-bg.jpg");}
+.block.cosy-club{background-image: url("cosy-club-bg.jpg");}
 .block.closed-sundays{background-image: url("closed-sundays-bg.jpg");}
-.block.toucan-box{background-image: url("toucan-box-bg.jpg"); color:$dark;&:hover{color: $dark;}}
+.block.toucan-box{background-image: url("toucan-box-bg.jpg");}
 .block.moustache-booth{background-image: url("moustache-booth-bg.jpg");}
 .block.brizzle-ipsum{background-image: url("brizzle-ipsum-bg.jpg");}
 
